Atualização do nome para Churrilho e imagem

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Animal de Estimação - Leão</title>
+    <title>Churrilho - Animal de Estimação</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #fff8e1;
+            text-align: center;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #ffb74d;
-            color: white;
-            text-align: center;
+            background-color: #4CAF50;
             padding: 20px;
+            color: white;
         }
         h1 {
             margin: 0;
@@ -26,18 +26,40 @@
         img {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        p {
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
+
     <header>
-        <h1>Meu Animal de Estimação - Leão</h1>
+        <h1>Churrilho - Animal de Estimação</h1>
     </header>
+
     <section>
-        <h2>Nome: Simba</h2>
-        <p>Simba é um leão majestoso que vive na savana. Ele é muito corajoso e tem uma personalidade forte, mas também é muito carinhoso com seus amigos. Seu rugido pode ser ouvido a quilômetros de distância!</p>
-        <img src="https://placeimg.com/400/300/animals" alt="Imagem do Leão">
+        <!-- A imagem de Churrilho -->
+        <img src="images/IMG_20240809_134911_823.jpg" alt="Churrilho - Leão">
+
+        <!-- Descrição de Churrilho -->
+        <p>Churrilho é um leão majestoso, um dos maiores felinos do mundo. Conhecido como o "Rei da Selva", ele é admirado por sua força e beleza.</p>
+        <p>Churrilho vive em um ambiente natural vasto e selvagem, mas com certeza conquista corações com sua imponência e nobreza.</p>
     </section>
+
+    <footer>
+        <p>Saiba mais sobre os leões e outros animais incríveis!</p>
+    </footer>
+
 </body>
 </html>
